# ArgMin

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  InverseDepth.h  Key.h  LittleOptimizer.h  MatrixBlock.h  MetaHelpers.h  OptimizableVariable.h  PSDLinearSystem.h  README.md  SE3.h  SparseBlockMatrix.h  SparseBlockMatrixInternal.h  TestLittleOptimizer.cpp  docker-compose.yml  slot_map.h
.github/workflows/: benchmark.yml  docs.yml  python-test.yml  test.yml
bench/: CMakeLists.txt  SlotMapBenchmark.cpp  SparseBlockMatrixBenchmark.cpp
cmake/: Dependencies.cmake  TangentConfig.cmake.in
docs/: conf.py  getting-started.rst  index.rst  requirements.txt
docs/api/: containers.rst  error-terms.rst  index.rst  optimization.rst  types.rst  variables.rst
include/argmin/ErrorTerms/: ErrorTermBase.h
include/argmin/Optimization/: Marginalizer.h  OptimizerContainers.h  SSEOptimizer.h
include/argmin/Types/: GaussianPrior.h  SparseBlockMatrix.h  SparseBlockRow.h
include/argmin/Variables/: OptimizableVariable.h
include/tangent/Containers/: Key.h  SlotArray.h  SlotMap.h
include/tangent/Differentiation/: Jet.h  JetTraits.h  JetVariable.h  NumericalDifferentiator.h
include/tangent/ErrorTerms/: AutoDiffErrorTerm.h  ErrorTermBase.h  ErrorTermValidator.h
include/tangent/Optimization/: HuberLossFunction.h  Marginalizer.h  OptimizerContainers.h  PSDSchurSolver.h  SSEOptimizer.h
include/tangent/Types/: BlockVector.h  GaussianPrior.h  MetaHelpers.h  SparseBlockMatrix.h  SparseBlockRow.h
include/tangent/Utilities/: Logging.h  Profiling.h
include/tangent/Variables/: InverseDepth.h  OptimizableVariable.h  SE3.h  SO3.h  SimpleScalar.h
python/: Dockerfile  pyproject.toml
python/tangent_py/: __init__.py  core.py  optimizer.py  templates.py
python/tests/: __init__.py  test_simple.py
test/: CMakeLists.txt  TestAutoDiff.cpp  TestAutoDiffErrorTerms.h  TestEdgeCases.cpp  TestMarginalization.cpp  TestParallelAlgorithms.cpp  TestSSEOptimizer.cpp  TestSlotArray.cpp  TestSlotMap.cpp  TestTangent.cpp  TestTangentExampleProblem.cpp  TestUtils.h  TestVariableTypes.cpp
